--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: rgb(18, 18, 19);
-  
+  font-family: arial;
 }
 
 h1 {
@@ -16,7 +16,7 @@ h1 {
 
 hr {
   /* color: #818384; */
- border-top: 0.5px solid rgba(97, 97, 100, 0.5);
+  border-top: 0.5px solid rgba(97, 97, 100, 0.5);
   width: 100%;
 }
 
@@ -29,12 +29,11 @@ hr {
 #row2,
 #row3,
 #row4,
-#row5, 
+#row5,
 #row6 {
   display: flex;
   gap: 0.3rem;
 }
-
 
 .letterInput {
   border: solid 2px rgba(97, 97, 100, 0.5);
@@ -43,10 +42,13 @@ hr {
   margin-bottom: 0.3rem;
   background-color: #121213;
   font-size: 40px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
 
-input{
+input {
   user-select: none;
-  color: white
+  color: white;
 }
