--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   --background: #121213;
   --accentGray: #61616580;
   --text: #ffffff;
+  --correct: #538d4e;
+  --close: #b59f3b;
 }
 
 body {
@@ -10,8 +12,9 @@ body {
   justify-content: center;
   align-items: center;
   background-color: var(--background);
-  font-family: arial;
+  font-family: franklin gothic;
   margin: 0;
+  gap: 1rem;
 }
 
 h1 {
@@ -23,8 +26,8 @@ h1 {
 }
 
 hr {
-  border-top: 0.5px solid var(--accentGray);
-  width: 100%;
+  border-top: 0.2px solid var(--accentGray);
+  /* width: 100%; */
 }
 #mainContainer {
   flex: 1;
@@ -40,17 +43,28 @@ hr {
 #row5,
 #row6 {
   display: flex;
-  gap: 0.2rem;
+  gap: 0.3rem;
 }
 
 .letterInput {
   border: solid 2px var(--accentGray);
   height: 3.5rem;
   width: 3.5rem;
-  margin-bottom: 0.2rem;
-  font-size: 40px;
+  margin-bottom: 0.3rem;
+  font-size: 35px;
+  font-weight: 600;
   display: flex;
   justify-content: center;
   align-items: center;
   color: var(--text);
+}
+
+.correctGuess {
+  background-color: var(--correct);
+  border-color: var(--correct);
+}
+
+.closeGuess {
+  background-color: var(--close);
+  border-color: var(--close);
 }
