--- a/style.css
+++ b/style.css
@@ -4,6 +4,26 @@
   --text: #ffffff;
   --correct: #538d4e;
   --close: #b59f3b;
+  --notInWord: #3a3a3c;
+}
+
+.modal{
+  display: none;
+  visibility: hidden;
+  background-color: white;
+  padding:20px;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem
+}
+
+#modalButtons{
+  display: flex;
+  justify-content: flex-end;
 }
 
 body {
@@ -67,4 +87,32 @@ hr {
 .closeGuess {
   background-color: var(--close);
   border-color: var(--close);
+}
+
+.wrongGuess {
+  background-color: var(--notInWord);
+  border-color: var(--notInWord);
+}
+
+.wrongAnswer {
+  animation: shake 0.3s ease-in-out 0s 1;
+}
+
+@keyframes shake {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-7px);
+  }
+  50% {
+    transform: translateX(7px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+}
+
+.hellYeah{
+  animation: shake 0.3s ease-in-out 0s 1;
 }
