Updated the answers file being used
Keyboard functionality added

--- a/style.css
+++ b/style.css
@@ -148,16 +148,16 @@ button {
 
 /* winning animation :D */
 .hellYeah {
-  animation: emphasize 0.3s ease-in-out 0s 1;
+  animation: bounce 0.3s ease-in-out 0s 1;
 }
 
-@keyframes emphasize {
+@keyframes bounce {
   0%,
   100% {
-    scale: 1;
+    transform: translateY(0);
   }
   50% {
-    scale: 1.2;
+    transform: translateY(-10%);
   }
 }
 
@@ -181,18 +181,30 @@ button {
 .modal {
   display: none;
   visibility: hidden;
-  background-color: white;
-  padding: 20px;
+}
+
+#playAgain{
+  width: fit-content;
+  font-size: 15px;
+
+  font-weight: 700;
+}
+
+
+.modalSeen {
+  display: contents;
+  visibility: visible;
+  background-color: var(--text);
+  border: var(--accentGray);
+  color: var(--accentGray);
+  padding: 40px;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
-
-#modalButtons {
-  display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  align-items: center;
 }
