--- a/style.css
+++ b/style.css
@@ -25,19 +25,20 @@ h1 {
   font-family: gambado-sans-forte, sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 40px;
-  margin-bottom: 0;
+  font-size: 38px;
+  padding-top: 5px;
+  margin:0;
 }
 
 hr {
-  border: none; /* Remove default border */
-  height: 1px; /* Set the height of the line */
+  border: none;
+  height: 1px; 
   background-color: var(
     --accentGray
-  ); /* Set the background color of the line */
+  );
   margin: 0;
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
 }
 #mainContainer {
   flex: 1;
@@ -45,7 +46,7 @@ hr {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1rem;
 }
 
 #letterRow1,
@@ -55,14 +56,14 @@ hr {
 #letterRow5,
 #letterRow6 {
   display: flex;
-  gap: 0.3rem;
+  gap: 0.2rem;
 }
 
 .letterInput {
   border: solid 2px var(--accentGray);
   height: 3.5rem;
   width: 3.5rem;
-  margin-bottom: 0.3rem;
+  margin-bottom: 0.2rem;
   font-size: 35px;
   font-weight: 600;
   display: flex;
@@ -183,11 +184,22 @@ button {
   visibility: hidden;
 }
 
-#playAgain{
-  width: fit-content;
-  font-size: 15px;
+#modalButtons{
+  display: flex;
+  gap: 1rem;
+}
 
+#playAgain, #exitModal{
+  width: 6rem;
+  font-size: 15px;
   font-weight: 700;
+  border: none;
+  background-color: var(--background);
+}
+
+#modalContent{
+  text-align: center;
+  font-size: 20px;
 }
 
 
@@ -196,9 +208,9 @@ button {
   visibility: visible;
   background-color: var(--text);
   border: var(--accentGray);
-  color: var(--accentGray);
-  padding: 40px;
-  position: fixed; /* Stay in place */
+  color: var(--background);
+  padding: 50px;
+  position: fixed; 
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -207,4 +219,5 @@ button {
   gap: 1rem;
   justify-content: center;
   align-items: center;
+  border-radius: 4px;
 }
