--- a/style.css
+++ b/style.css
@@ -27,15 +27,13 @@ h1 {
   font-style: normal;
   font-size: 38px;
   padding-top: 5px;
-  margin:0;
+  margin: 0;
 }
 
 hr {
   border: none;
-  height: 1px; 
-  background-color: var(
-    --accentGray
-  );
+  height: 1px;
+  background-color: var(--accentGray);
   margin: 0;
   width: 100%;
   margin-bottom: 0.2rem;
@@ -184,33 +182,34 @@ button {
   visibility: hidden;
 }
 
-#modalButtons{
+#modalButtons {
   display: flex;
   gap: 1rem;
 }
 
-#playAgain, #exitModal{
+#playAgain,
+#exitModal {
   width: 6rem;
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 600;
   border: none;
   background-color: var(--background);
 }
 
-#modalContent{
+#modalContent {
   text-align: center;
   font-size: 20px;
 }
 
-
 .modalSeen {
   display: contents;
   visibility: visible;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-color: var(--text);
-  border: var(--accentGray);
   color: var(--background);
-  padding: 50px;
-  position: fixed; 
+  padding: 40px;
+  width: 18rem;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -220,4 +219,21 @@ button {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+}
+
+
+h2 {
+  color: var(--background);
+  font-family: gambado-sans-forte, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 25px;
+  margin: 0;
+}
+
+@media only screen and (max-width: 600px) {
+  button {
+    height: 48px;
+    width: 30px;
+  }
 }
