--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ h1 {
   font-family: gambado-sans-forte, sans-serif;
   font-weight: 700;
   font-style: normal;
-  font-size: 38px;
+  font-size: 36px;
   padding-top: 5px;
-  margin: 0;
+  margin: -2px 0;
 }
 
 hr {
@@ -44,7 +44,8 @@ hr {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+  margin-top: 1rem;
 }
 
 #letterRow1,
@@ -59,8 +60,8 @@ hr {
 
 .letterInput {
   border: solid 2px var(--accentGray);
-  height: 3.2rem;
-  width: 3.2rem;
+  height: 3.6rem;
+  width: 3.6rem;
   margin-bottom: 0.36rem;
   font-size: 35px;
   font-weight: 600;
@@ -77,7 +78,7 @@ button {
   cursor: pointer;
   user-select: none;
   height: 58px;
-  width: 40px;
+  width: 43px;
   font-size: 1.2em;
   background-color: var(--keyboardKey);
   color: var(--text);
@@ -87,14 +88,21 @@ button {
 .keyboardContainer {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 7px;
   align-items: center;
+}
+
+.keyRow1,
+.keyRow2, 
+.keyRow3{
+  display: flex;
+  gap: 7px;
 }
 
 #enter,
 #back {
   font-size: 13px;
-  width: 60px;
+  width: 65px;
 }
 
 .material-symbols-outlined {
