--- a/style.css
+++ b/style.css
@@ -244,10 +244,12 @@ h2 {
   }
 
   button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 48px;
     width: 30px;
     font-size: 1em;
-    text-align: center;
   }
 
   .keyRow1,
